--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
 					</a>
 
 					<ul class="site-nav list">
-						<li class="item"><a href="./index.html" class="link">Studio</a></li>
+						<li class="item">
+							<a href="./index.html" class="link main-index">Studio</a>
+						</li>
 						<li class="item">
 							<a href="./portfolio.html" class="link">Portfolio</a>
 						</li>
@@ -57,7 +59,9 @@
 			<section class="hero">
 				<div class="container">
 					<h1 class="hero-titel">Effective Solutions for Your Business</h1>
-					<button type="button" class="hero-button">Order Service</button>
+					<button type="button" class="hero-button" data-modal-open>
+						Order Service
+					</button>
 				</div>
 			</section>
 
@@ -427,5 +431,15 @@
 				</div>
 			</div>
 		</footer>
+		<div class="backdrop is-hidden" data-modal>
+			<div class="modal">
+				<button class="modal-button" data-modal-close>
+					<svg class="modal-icon" width="8" height="8">
+						<use href="./images/symbol-defs-fix.svg#close-black"></use>
+					</svg>
+				</button>
+			</div>
+		</div>
+		<script src="./js/modal.js"></script>
 	</body>
 </html>
