--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,7 @@
 					<ul class="site-nav list">
 						<li class="item"><a href="./index.html" class="link">Studio</a></li>
 						<li class="item">
-							<a href="./portfolio.html" class="link">Portfolio</a>
+							<a href="./portfolio.html" class="link main-index">Portfolio</a>
 						</li>
 						<li class="item"><a href="" class="link">Contacts</a></li>
 					</ul>
@@ -77,163 +77,181 @@
 					<ul class="portfolio-list">
 						<li class="item">
 							<a class="portfolio-link">
-								<img
-									src="./images/banking_app.jpg"
-									alt="Banking App Interface Concept"
-									width="360"
-								/>
+								<div class="portfolio-position">
+									<img
+										src="./images/banking_app.jpg"
+										alt="Banking App Interface Concept"
+										width="360"
+									/>
+									<p class="portfolio-hover">
+										14 Stylish and User-Friendly App Design Concepts · Task
+										Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+										App · Cloud Storage App
+									</p>
+								</div>
 								<div class="border">
 									<h3 class="portfolio-title">Banking App Interface Concept</h3>
 									<p class="portfolio-text">App</p>
 								</div>
-								<!-- <p>
-								14 Stylish and User-Friendly App Design Concepts · Task Manager
-								App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
-								Storage App
-							</p> -->
 							</a>
 						</li>
 						<li class="item">
 							<a class="portfolio-link">
-								<img
-									src="./images/cashless_payment.jpg"
-									alt="Cashless Payment"
-									width="360"
-								/>
+								<div class="portfolio-position">
+									<img
+										src="./images/cashless_payment.jpg"
+										alt="Cashless Payment"
+										width="360"
+									/>
+									<p class="portfolio-hover">
+										14 Stylish and User-Friendly App Design Concepts · Task
+										Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+										App · Cloud Storage App
+									</p>
+								</div>
 								<div class="border">
 									<h3 class="portfolio-title">Cashless Payment</h3>
 									<p class="portfolio-text">Marketing</p>
-									<!-- <p>
-								14 Stylish and User-Friendly App Design Concepts · Task Manager
-								App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
-								Storage App
-							</p> -->
 								</div>
 							</a>
 						</li>
 						<li class="item">
 							<a class="portfolio-link">
-								<img
-									src="./images/meditaion_app.jpg"
-									alt="Meditaion App"
-									width="360"
-								/>
+								<div class="portfolio-position">
+									<img
+										src="./images/meditaion_app.jpg"
+										alt="Meditaion App"
+										width="360"
+									/>
+									<p class="portfolio-hover">
+										14 Stylish and User-Friendly App Design Concepts · Task
+										Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+										App · Cloud Storage App
+									</p>
+								</div>
 								<div class="border">
 									<h3 class="portfolio-title">Meditaion App</h3>
 									<p class="portfolio-text">App</p>
-									<!-- <p>
-								14 Stylish and User-Friendly App Design Concepts · Task Manager
-								App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
-								Storage App
-							</p> -->
 								</div>
 							</a>
 						</li>
 						<li class="item">
-							<a class="portfolio-link">
-								<img
-									src="./images/taxi_service.jpg"
-									alt="Taxi Service"
-									width="360"
-								/>
+							<a class="portfolio-link"
+								><div class="portfolio-position">
+									<img
+										src="./images/taxi_service.jpg"
+										alt="Taxi Service"
+										width="360"
+									/>
+									<p class="portfolio-hover">
+										14 Stylish and User-Friendly App Design Concepts · Task
+										Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+										App · Cloud Storage App
+									</p>
+								</div>
 								<div class="border">
 									<h3 class="portfolio-title">Taxi Service</h3>
 									<p class="portfolio-text">Marketing</p>
-									<!-- <p>
-								14 Stylish and User-Friendly App Design Concepts · Task Manager
-								App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
-								Storage App
-							</p> -->
 								</div>
 							</a>
 						</li>
 						<li class="item">
-							<a class="portfolio-link">
-								<img
-									src="./images/screen_illustrations.jpg"
-									alt="Screen Illustrations"
-									width="360"
-								/>
+							<a class="portfolio-link"
+								><div class="portfolio-position">
+									<img
+										src="./images/screen_illustrations.jpg"
+										alt="Screen Illustrations"
+										width="360"
+									/>
+									<p class="portfolio-hover">
+										14 Stylish and User-Friendly App Design Concepts · Task
+										Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+										App · Cloud Storage App
+									</p>
+								</div>
 								<div class="border">
 									<h3 class="portfolio-title">Screen Illustrations</h3>
 									<p class="portfolio-text">Design</p>
-									<!-- <p>
-								14 Stylish and User-Friendly App Design Concepts · Task Manager
-								App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
-								Storage App
-							</p> -->
 								</div>
 							</a>
 						</li>
 						<li class="item">
-							<a class="portfolio-link">
-								<img
-									src="./images/online_courses.jpg"
-									alt="Online Courses"
-									width="360"
-								/>
+							<a class="portfolio-link"
+								><div class="portfolio-position">
+									<img
+										src="./images/online_courses.jpg"
+										alt="Online Courses"
+										width="360"
+									/>
+									<p class="portfolio-hover">
+										14 Stylish and User-Friendly App Design Concepts · Task
+										Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+										App · Cloud Storage App
+									</p>
+								</div>
 								<div class="border">
 									<h3 class="portfolio-title">Online Courses</h3>
 									<p class="portfolio-text">Marketing</p>
-									<!-- <p>
-								14 Stylish and User-Friendly App Design Concepts · Task Manager
-								App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
-								Storage App
-							</p> -->
 								</div>
 							</a>
 						</li>
 						<li class="item">
-							<a class="portfolio-link">
-								<img
-									src="./images/instagram_stories.jpg"
-									alt="Instagram Stories Concept"
-									width="360"
-								/>
+							<a class="portfolio-link"
+								><div class="portfolio-position">
+									<img
+										src="./images/instagram_stories.jpg"
+										alt="Instagram Stories Concept"
+										width="360"
+									/>
+									<p class="portfolio-hover">
+										14 Stylish and User-Friendly App Design Concepts · Task
+										Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+										App · Cloud Storage App
+									</p>
+								</div>
 								<div class="border">
 									<h3 class="portfolio-title">Instagram Stories Concept</h3>
 									<p class="portfolio-text">Design</p>
-									<!-- <p>
-								14 Stylish and User-Friendly App Design Concepts · Task Manager
-								App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
-								Storage App
-							</p> -->
 								</div>
 							</a>
 						</li>
 						<li class="item">
-							<a class="portfolio-link">
-								<img
-									src="./images/organic_food.jpg"
-									alt="Organic Food"
-									width="360"
-								/>
+							<a class="portfolio-link"
+								><div class="portfolio-position">
+									<img
+										src="./images/organic_food.jpg"
+										alt="Organic Food"
+										width="360"
+									/>
+									<p class="portfolio-hover">
+										14 Stylish and User-Friendly App Design Concepts · Task
+										Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+										App · Cloud Storage App
+									</p>
+								</div>
 								<div class="border">
 									<h3 class="portfolio-title">Organic Food</h3>
 									<p class="portfolio-text">Web Site</p>
-									<!-- <p>
-								14 Stylish and User-Friendly App Design Concepts · Task Manager
-								App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
-								Storage App
-							</p> -->
 								</div>
 							</a>
 						</li>
 						<li class="item">
-							<a class="portfolio-link">
-								<img
-									src="./images/fresh_coffee.jpg"
-									alt="Fresh Coffee"
-									width="360"
-								/>
+							<a class="portfolio-link"
+								><div class="portfolio-position">
+									<img
+										src="./images/fresh_coffee.jpg"
+										alt="Fresh Coffee"
+										width="360"
+									/>
+									<p class="portfolio-hover">
+										14 Stylish and User-Friendly App Design Concepts · Task
+										Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+										App · Cloud Storage App
+									</p>
+								</div>
 								<div class="border">
 									<h3 class="portfolio-title">Fresh Coffee</h3>
 									<p class="portfolio-text">Web Site</p>
-									<!-- <p>
-								14 Stylish and User-Friendly App Design Concepts · Task Manager
-								App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
-								Storage App
-							</p> -->
 								</div>
 							</a>
 						</li>
