--- a/portfolio.html
+++ b/portfolio.html
@@ -76,7 +76,7 @@
 
 					<ul class="portfolio-list">
 						<li class="item">
-							<a class="portfolio-link" href="">
+							<a class="portfolio-link" href="#">
 								<div class="portfolio-position">
 									<img
 										src="./images/banking_app.jpg"
@@ -96,7 +96,7 @@
 							</a>
 						</li>
 						<li class="item">
-							<a class="portfolio-link" href="">
+							<a class="portfolio-link" href="#">
 								<div class="portfolio-position">
 									<img
 										src="./images/cashless_payment.jpg"
@@ -116,7 +116,7 @@
 							</a>
 						</li>
 						<li class="item">
-							<a class="portfolio-link" href="">
+							<a class="portfolio-link" href="#">
 								<div class="portfolio-position">
 									<img
 										src="./images/meditaion_app.jpg"
@@ -136,7 +136,7 @@
 							</a>
 						</li>
 						<li class="item">
-							<a class="portfolio-link" href=""
+							<a class="portfolio-link" href="#"
 								><div class="portfolio-position">
 									<img
 										src="./images/taxi_service.jpg"
@@ -156,7 +156,7 @@
 							</a>
 						</li>
 						<li class="item">
-							<a class="portfolio-link" href=""
+							<a class="portfolio-link" href="#"
 								><div class="portfolio-position">
 									<img
 										src="./images/screen_illustrations.jpg"
@@ -176,7 +176,7 @@
 							</a>
 						</li>
 						<li class="item">
-							<a class="portfolio-link" href=""
+							<a class="portfolio-link" href="#"
 								><div class="portfolio-position">
 									<img
 										src="./images/online_courses.jpg"
@@ -196,7 +196,7 @@
 							</a>
 						</li>
 						<li class="item">
-							<a class="portfolio-link" href=""
+							<a class="portfolio-link" href="#"
 								><div class="portfolio-position">
 									<img
 										src="./images/instagram_stories.jpg"
@@ -216,7 +216,7 @@
 							</a>
 						</li>
 						<li class="item">
-							<a class="portfolio-link" href=""
+							<a class="portfolio-link" href="#"
 								><div class="portfolio-position">
 									<img
 										src="./images/organic_food.jpg"
@@ -236,7 +236,7 @@
 							</a>
 						</li>
 						<li class="item">
-							<a class="portfolio-link" href=""
+							<a class="portfolio-link" href="#"
 								><div class="portfolio-position">
 									<img
 										src="./images/fresh_coffee.jpg"
